--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -22,15 +22,15 @@
     <!-- Wrapper for slides -->
     <div class="carousel-inner">
       <div class="item active">
-        <img src="img/1.jpg" alt="Los Angeles" style="width:100%;">
+        <img src="img/1.jpg" alt="img/1" style="width:100%;">
       </div>
 
       <div class="item">
-        <img src="img/2.jpg" alt="Chicago" style="width:100%;">
+        <img src="img/2.jpg" alt="img/2" style="width:100%;">
       </div>
     
       <div class="item">
-        <img src="img/3.jpg" alt="New york" style="width:100%;">
+        <img src="img/3.jpg" alt="img/3" style="width:100%;">
       </div>
     </div>
 
